[AI Chat]: Fix Conversation History Warning Overlapping Menu (#33157)
Fixes a bug where the Conversation History warning banner would overlap the Regenerate Answer button menu

--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -229,6 +229,7 @@
   // Otherwise the menu can sometimes be overlapped by the Suggested question
   // buttons.
   position: var(--iframe-position-for-menus);
+  z-index: 1;
 }
 
 .aichatIframeContainer.dragActive {
